add network widget

--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -11,7 +11,7 @@
     margin-left: 10px;
 }
 
-.time {
+.text_widget {
     background: linear-gradient(#11111b, #11111b) padding-box, linear-gradient(to top, #89b4fa, #f5e0dc) border-box;
     border-radius: 21px;
     padding-left: 20px;
