--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -1,7 +1,5 @@
 * {
     all: unset;
-    color: #cdd6f4;
-    font-family: "Noto";
     font-size: 15;
     font-weight: bold;
 }
@@ -9,6 +7,8 @@
 .bar {
     margin-right: 10px;
     margin-left: 10px;
+    color: #cdd6f4;
+    font-family: "Noto";
 }
 
 .text_widget {
@@ -20,12 +20,19 @@
     border: 3px solid transparent;
 }
 
-.internal_box {
-    background: linear-gradient(#45475a, #313244) padding-box, linear-gradient(to top, #f9e2af, #a6e3a1) border-box;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    padding-left: 5px;
-    padding-right: 5px;
-    border-radius: 4px;
-    border: 2px solid transparent;
+.active_workspace {
+    background: none;
+    margin-left: 3;
+    margin-right: 3;
+    padding-left: 0;
+    padding-right: 0;
+    color:  	#fab387;
+}
+
+.inactive_workspace {
+    background: none;
+    margin-left: 3;
+    margin-right: 3;
+    padding-left: 0;
+    padding-right: 0;
 }
