--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -1,3 +1,30 @@
+$rosewater: #f5e0dc;
+$flamingo: #f2cdcd;
+$pink: #f5c2e7;
+$mauve: #cba6f7;
+$red: #f38ba8;
+$maroon: #eba0ac;
+$peach: #fab387;
+$yellow: #f9e2af;
+$green: #a6e3a1;
+$teal: #94e2d5;
+$sky: #89dceb;
+$sapphire: #74c7ec;
+$blue: #89b4fa;
+$lavender: #b4befe;
+$text: #cdd6f4;
+$subtext1: #bac2de;
+$subtext0: #a6adc8;
+$overlay2: #9399b2;
+$overlay1: #7f849c;
+$overlay0: #6c7086;
+$surface2: #585b70;
+$surface1: #45475a;
+$surface0: #313244;
+$base: #1e1e2e;
+$mantle: #181825;
+$crust: #11111b;
+
 * {
     all: unset;
     font-size: 15;
@@ -5,19 +32,18 @@
 }
 
 .bar {
-    margin-right: 10px;
-    margin-left: 10px;
-    color: #cdd6f4;
+    margin-right: 100px;
+    margin-left: 100px;
+    color: $text;
+    background: linear-gradient($mantle, $mantle) padding-box, linear-gradient(to top, $blue, $rosewater) border-box;
+    border-radius: 15px;
+    border: 3px solid transparent;
     font-family: "Noto";
 }
 
 .text_widget {
-    background: linear-gradient(#11111b, #11111b) padding-box, linear-gradient(to top, #89b4fa, #f5e0dc) border-box;
-    border-radius: 21px;
     padding-left: 20px;
     padding-right: 20px;
-    border-width: 3px;
-    border: 3px solid transparent;
 }
 
 .active_workspace {
