--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -79,3 +79,18 @@ $crust: #11111b;
 .red:hover {
     color: $yellow;
 }
+
+.extra_padding_left {
+    padding-left: 20px;
+}
+
+.extra_padding_right {
+    padding-right: 20px;
+}
+
+.music {
+    background: $crust;
+    border-radius: 5px;
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
