--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -62,7 +62,7 @@ $crust: #11111b;
     margin-right: 3;
     padding-left: 0;
     padding-right: 0;
-    color:  	#fab387;
+    color: $peach;
 }
 
 .inactive_workspace {
@@ -89,8 +89,10 @@ $crust: #11111b;
 }
 
 .music {
-    background: $crust;
-    border-radius: 5px;
+    background: linear-gradient(to left, lavender, $text) padding-box, linear-gradient(to top, $blue, $rosewater) border-box;
+    border: 2px solid transparent;
+    border-radius: 6px;
     margin-top: 3px;
     margin-bottom: 3px;
+    color: $crust;
 }
