clean up eww theming

--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -25,6 +25,13 @@ $base: #1e1e2e;
 $mantle: #181825;
 $crust: #11111b;
 
+$background: $mantle;
+$outline_1: $blue;
+$outline_2: $rosewater;
+$active: $peach;
+$button: $red;
+$button_hover: $yellow;
+
 * {
     all: unset;
     font-size: 15;
@@ -35,7 +42,7 @@ $crust: #11111b;
     margin-right: 40px;
     margin-left: 40px;
     color: $text;
-    background: linear-gradient($mantle, $mantle) padding-box, linear-gradient(to top, $blue, $rosewater) border-box;
+    background: linear-gradient($background, $background) padding-box, linear-gradient(to top, $outline_1, $outline_2) border-box;
     border-radius: 15px;
     border: 3px solid transparent;
     font-family: "Noto";
@@ -47,13 +54,8 @@ $crust: #11111b;
 }
 
 .start_button {
-    color: $sapphire;
     padding-left: 20px;
     padding-right: 20px;
-}
-
-.start_button:hover {
-    color: $red;
 }
 
 .active_workspace {
@@ -62,7 +64,7 @@ $crust: #11111b;
     margin-right: 3;
     padding-left: 0;
     padding-right: 0;
-    color: $peach;
+    color: $active;
 }
 
 .inactive_workspace {
@@ -74,10 +76,10 @@ $crust: #11111b;
 }
 
 .red {
-    color: $red;
+    color: $button;
 }
 .red:hover {
-    color: $yellow;
+    color: $button_hover;
 }
 
 .extra_padding_left {
@@ -89,7 +91,7 @@ $crust: #11111b;
 }
 
 .music {
-    background: linear-gradient(to left, lavender, $text) padding-box, linear-gradient(to top, $blue, $rosewater) border-box;
+    background: linear-gradient(to left, $lavender, $text) padding-box, linear-gradient(to top, $outline_1, $outline_2) border-box;
     border: 2px solid transparent;
     border-radius: 6px;
     margin-top: 3px;
